[project]
name = "garment-api"
version = "0.1.0"
description = "A starlette application to discover garments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonlines>=4.0.0",
    "motor>=3.6.0",
    "pydantic>=2.9.2",
    "pymongo>=4.9.2",
    "pyyaml>=6.0.2",
    "starlette>=0.41.0",
    "uvicorn>=0.32.0"
]
